test/files/neg/macro-override-method-overrides-macro.check
Macros_Test_2.scala:8: error: macro can only be overridden by another macro:
macro def foo(x: String): Unit (defined in class B)
  override def foo(x: String): Unit = println("fooDString")
               ^
one error found
